# TelAnalysis

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  README.ru.md  app.py  channel_analyse.py  docker-compose.yml  pyproject.toml  requirements-sentiment.txt  requirements.txt  telanalysis.py  utils.py  words_analyze.py
.github/workflows/: ci.yml
analysis/: anniversaries.py  backup.py  chains.py  channel.py  emoji_stats.py  forwards.py  graph.py  highlights.py  html_loader.py  latency.py  loader.py  mat.py  media.py  monologues.py  overview.py  reciprocity.py  render.py  sentiment.py  speaking.py  stickers.py  theme.py  timing.py  utils.py  words.py
api/: main.py  requirements.txt
frontend/: README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  Channel.tsx  ChatManager.tsx  Network.tsx  Onboarding.tsx  Overview.tsx  PerUser.tsx  Sentiment.tsx  Words.tsx  index.css  main.tsx
frontend/src/components/: charts.tsx  collapsible.tsx  loading.tsx  motion.tsx  rank-table.tsx  section.tsx  sparkline.tsx  stat.tsx  user-combobox.tsx  wordcloud.tsx
frontend/src/components/ui/: button.tsx  card.tsx  checkbox.tsx  input.tsx  popover.tsx  select.tsx  skeleton.tsx  tabs.tsx
frontend/src/lib/: api.ts  chart-theme.ts  i18n.ts
i18n/: __init__.py
tests/: test_api.py  test_backup.py  test_highlights.py  test_html_loader.py  test_loader.py  test_utils.py
tools/: gen_demo_data.py  screenshots.py
ui/: cache.py  components.py  i18n.py
